--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Camila-Domato</title>
 </head>
 <body>
+    <main>
+        <div>
+            <p>hola</p>
+        </div>
+    </main>
+
     
 </body>
 </html>
